Code set to class start

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>CSCI 5619 Lecture 8</title>
+        <title>Interaction and Physics</title>
 
         <style>
             html, body {
